--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,6 @@
     "angular-animate": "^1.6.1",
     "angular-bootstrap": "^2.3.2",
     "bootstrap": "^3.3.7",
-    "AngularJS-Toaster": "toaster#^2.1.0"
+    "AngularJS-Toaster": "angularjs-toaster#^2.1.0"
   }
 }
